# EssentialPatcher

./: CMakeLists.txt  README.md  dllmain.cpp  dllmain.h  functions.cpp  functions.h
